--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
         <h1 class="h-primary center">Our Clients</h1>
         <div id="clients">
             <div class="client item">
-                <img src="/img/logo1.png" alt="clientlogo">
+                <img src="img/logo1.png" alt="clientlogo">
             </div>
             <div class="client item">
-                <img src="/img/logo2.png" alt="clientlogo">
+                <img src="img/logo2.png" alt="clientlogo">
             </div>
             <div class="client item">
-                <img src="/img/logo3.png" alt="clientlogo">
+                <img src="img/logo3.png" alt="clientlogo">
             </div>
             <div class="client item">
-                <img src="/img/logo4.png" alt="clientlogo">
+                <img src="img/logo4.png" alt="clientlogo">
             </div>
             
         </div>
