--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <section id="home">
         <h1 class="h-primary">Welcome to Food Delight</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate odit placeat ab sapiente quis nesciunt aliquam</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate odit placeat ab sapiente quis nesciunt aliquam</p>
+        <p>Hungry?</p>
+        <p>Grab Your Food Now From Different Restraunts Near You</p>
         <button class="btn">Order Now</button>
     </section>
 
@@ -38,17 +38,17 @@
             <div class="box">
                 <img src="img/1.jpeg" alt="picture">
                 <h2 class="h-secondary center">Food Catering</h2>
-                <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae, deleniti dolore.</p>
+                <p class="center">We here at FoodDelight take food catering orders for different occasions.</p>
             </div>
             <div class="box">
                 <img src="img/3.png" alt="picture">
                 <h2 class="h-secondary center">Food Ordering</h2>
-                <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae, deleniti dolore.</p>
+                <p class="center">We here at FoodDelight Delivers food at your doorsteps without any charges.</p>
             </div>
             <div class="box">
                 <img src="img/2.jpeg" alt="picture">
                 <h2 class="h-secondary center">Bulk Ordering</h2>
-                <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae, deleniti dolore.</p>
+                <p class="center">We here at FoodDelight take bulk food orders for different occasions.</p>
             </div>
         </div>
         
